# 58hack-team-kakinoha

./: README.md  USER_FLOWS.md
GrowTree/backend/: .env.example  Dockerfile  INTEGRATION_TEST_RESULTS.md  README.md  pyproject.toml  run_integration_test.sh  run_integration_test_lite.sh
GrowTree/backend/alembic/: env.py
GrowTree/backend/alembic/versions/: 0001_create_all_tables.py  0002_change_tree_data_to_jsonb.py  0003_add_hashed_password.py
GrowTree/backend/app/: main.py
GrowTree/backend/app/api/: admin.py  api.py
GrowTree/backend/app/core/: config.py  encryption.py  llm.py  password.py  prompts.py  prompts_streaming.py  rank.py
GrowTree/backend/app/crud/: badge.py  oauth_account.py  profile.py  quest.py  quest_progress.py  skill_tree.py  user.py
GrowTree/backend/app/db/: base.py  session.py
GrowTree/backend/app/dependencies/: __init__.py  auth.py
GrowTree/backend/app/models/: badge.py  enums.py  oauth_account.py  profile.py  quest.py  quest_progress.py  skill_tree.py  user.py
GrowTree/backend/app/schemas/: analyze.py  badge.py  grades.py  oauth_account.py  profile.py  quest.py  quest_progress.py  skill_tree.py  user.py
GrowTree/backend/app/services/: __init__.py  badge_service.py  (+7 more)
GrowTree/backend/data/: convert_skill_trees.py
GrowTree/backend/scripts/: ai_generated_web.json  analyze_skill_tree_completion.py  award_test_badge.py  check_quests.py  clear_skill_tree_cache.py  generate_skill_tree_cli.py  seed_quests.py  seed_test_data.py  test_full_ai_generation.py  test_generation_speed.py  test_skill_tree_personalization.py  test_streaming.py
GrowTree/backend/tests/: conftest.py
TalkScope/Backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  UV_GUIDE.md  main.py  pyproject.toml  requirements.txt
TalkScope/Backend/db/: dictionary.sql
TalkScope/Backend/scripts/: migrate_word_to_term.py  reset_dictionary_db.py  run_text_analysis_checks.py  test_dictionary.py  test_refer_dictionary.py
TalkScope/Backend/tests/: test_analysis_endpoint.py  test_dictionary_endpoint.py  test_dictionary_management_endpoint.py  test_dictionary_service.py  test_refer_dictionary_endpoint.py  test_text_analysis_service.py
(+378 files in other folders)
