[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
# Decision: Pin dependencies to specific version ranges (not "*")
# Reason: Mitigates supply-chain risk from hijacked package updates
fastapi = "^0.120.0"  # CVE-2025-62727対策でstarlette 0.49.1+サポート版
starlette = "^0.49.1"  # CVE-2025-62727 (DoS via Range header) 対策
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.13.0"
sqlalchemy = "^2.0.46"
alembic = "^1.18.4"
cryptography = "^44.0.0"
# AI/LLM dependencies (CVE-2025-68664, CVE-2025-65106対策)
langchain = "^0.3.0"
langchain-core = "^0.3.81"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.3.0"
httpx = "^0.28.0"
PyJWT = "^2.10.0"  # GitHub OAuth コールバック後の JWT 発行 (ADR 014)
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
# Decision: Pin dev dependencies to prevent CI instability
# Reason: Unpinned versions can introduce breaking changes unexpectedly
ruff = "^0.8.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
# Note: pip-audit removed - security scanning consolidated to Trivy (security.yml)
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require real API keys)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"