[project]
name = "lexiflow-backend"
version = "0.1.0"
description = "FastAPI backend for LexiFlow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sudachipy>=0.6.10",
    "sudachidict-core>=20240109",
    "spacy>=3.7.0",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-cockroachdb>=2.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]